@@ -198,6 +198,12 @@ Here is a list of the currently supported parser related 'tags', 'magic words' a
 {{row|#epropset         | Parser Function | ScriptingTools }}
 
 {{row|__NOCOMMIT__      | Proprietary Word| FileManager }}
+{{row|@@file@@      	| Proprietary Word| FileManager }}
+{{row|@@mtime@@      	| Proprietary Word| FileManager }}
+{{row|@@clearcache@@ 	| Proprietary Word| FileManager }}
+{{row|#extractfile     	| Parser Function | FileManager }}
+{{row|#extractmtime    	| Parser Function | FileManager }}
+{{row|#currentmtime    	| Parser Function | FileManager }}
 
 {{row|#clearactions     | Parser Function | SkinTools   }}
 {{row|#removeactions    | Parser Function | SkinTools   }}
